--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -9,14 +9,15 @@
   overflow-x: auto;
   padding-bottom: 2px;
 
-  & .row {
+  .row {
     display: flex;
     flex-direction: row;
     min-height: 20px;
     height: $row-height;
   }
 
-  & .row-info {
+  .row-info {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,11 +28,12 @@
     border-top: none;
   }
 
-  & .row-data {
+  .row-data {
     display: flex;
   }
 
-  & .column {
+  .column {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,7 +46,7 @@
     height: 100%;
   }
 
-  & .cell {
+  .cell {
     min-width: 40px;
     padding: 5px;
     width: $cell-width;
@@ -56,11 +58,43 @@
     white-space: nowrap;
     outline: none;
 
+
     &.selected {
       border: none;
-      outline: 2px solid #3c74ff;
+      outline: 2px solid $primary-color;
       z-index: 2;
     }
-
   }
+
+  .col-resize, .row-resize {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: $primary-color;
+    opacity: 0;
+    z-index: 1000;
+
+    &:hover {
+      opacity: 1!important;
+    }
+  }
+
+  .col-resize {
+    top: 0;
+    width: 4px;
+
+    &:hover {
+      cursor: col-resize;
+    }
+  }
+
+  .row-resize {
+    left: 0;
+    height: 4px;
+
+    &:hover {
+      cursor: row-resize;
+    }
+  }
+
 }
