--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -51,7 +51,7 @@
     padding: 5px;
     width: $cell-width;
     height: 100%;
-    border: 1px solid #e2e3e3;
+    border: 1px solid #bdbdbd;
     border-top: 0;
     border-left: 0;
     color: #111;
